Fix scrollbar of participants list to be on right side

--- a/css/style.scss
+++ b/css/style.scss
@@ -1077,9 +1077,15 @@ video {
 	padding-bottom: 0;
 }
 
-#app-sidebar #participantsTabView form,
-#app-sidebar #participantsTabView .participantWithList {
+/* Form needs margin, participant list needs padding
+ * So the form has margin from the right side, but the scroll bar of the
+ * participant list is directly on the right.
+ */
+#app-sidebar #participantsTabView form {
 	margin-right: 15px;
+}
+#app-sidebar #participantsTabView .participantWithList {
+	padding-right: 15px;
 }
 
 /**
